--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,6 +7,8 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/newteam">
+     <!-- Tests wanted specific keys(input names) for the params hash to be changed into instance variables -->
+     <!-- The form and display page wanted both what the picture asked for -->
      <p>Team Name: <input type="text" name="name"></p>
      <p>Coach: <input type="text" name="coach"></p>
      <p>Point Guard: <input type="text" name="pg"></p>
